--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,7 @@
             "Tiny\\": "src/"
         }
     },
-    "require": {}
+    "require-dev": {
+        "phpunit/phpunit": "^10.1"
+    }
 }
