--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^10.1"
+    },
+    "require": {
+        "psr/container": "^2.0"
     }
 }
